tests/ui/issues/issue-36836.stderr
error[E0412]: cannot find type `Bar` in this scope
  --> $DIR/issue-36836.rs:13:17
   |
LL | impl<T> Foo for Bar<T> {}
   |                 ^^^ not found in this scope

error: hi
  --> $DIR/issue-36836.rs:13:1
   |
LL | trait Foo {}
   | --------- built-in `dyn Foo` implementation for this trait
LL |
LL | impl<T> Foo for Bar<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^ overlaps with this blanket impl
   |
   = note: `#[forbid(dyn_overlap)]` on by default

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0412`.
